2005-01-06  Jorn Baayen  <jbaayen@gnome.org>

	* src/CoverDatabase.cs:
	* src/CoverImage.cs:
	* src/Song.cs:

	First iteration of cover image handling cleanup.

2005-01-06  Jorn Baayen  <jbaayen@gnome.org>

	* TODO:
	* data/glade/PlaylistWindow.glade:
	* src/AddAlbumWindow.cs:
	* src/FileUtils.cs:
	* src/Muine.cs:
	* src/PlaylistWindow.cs:
	* src/SongDatabase.cs:
	* src/StockIcons.cs:

	Some error handling cleanups, and support for dragging a playlist
	file from the "Playlist" label.

2005-01-06  Jorn Baayen  <jbaayen@gnome.org>

	* src/AddAlbumWindow.cs:
	* src/AddSongWindow.cs:
	* src/AddWindow.cs:
	* src/Config.cs:
	* src/CoverDatabase.cs:
	* src/CoverImage.cs:
	* src/DndUtils.cs:
	* src/FileSelector.cs:
	* src/FileUtils.cs:
	* src/GnomeProxy.cs:
	* src/Makefile.am:
	* src/Muine.cs:
	* src/PlaylistWindow.cs:
	* src/PluginManager.cs:
	* src/SongDatabase.cs:
	* src/StringUtils.cs:

	Move GConf stuff to new Config class, move all DND related stuff
	to DndUtils.

2005-01-06  Jorn Baayen  <jbaayen@gnome.org>

	* src/Muine.cs:

	Small cleanup.

2005-01-06  Jorn Baayen  <jbaayen@gnome.org>

	* src/Muine.cs:
	* src/PlaylistWindow.cs:

	Return 1 on error.

2005-01-06  Jorn Baayen  <jbaayen@gnome.org>

	* DBusLib/Makefile.am:
	* PluginLib/Makefile.am:
	* configure.in:
	* plugins/Makefile.am:
	* src/Makefile.am:

	Move -codepage:utf8 flag to configure.in.

2005-01-06  Jorn Baayen  <jbaayen@gnome.org>

	* src/Makefile.am:

	Split off MUINE_GENERATED_CSFILES from MUINE_CSFILES.

2005-01-06  Jorn Baayen  <jbaayen@gnome.org>

	* configure.in:
	* data/Makefile.am:
	* data/org.gnome.Muine.service.in:

	Install D-Bus service file.

2005-01-06  Jorn Baayen  <jbaayen@gnome.org>

	* configure.in:
	* src/Makefile.am:
	* src/muine.exe.config.in:
	* src/muine.in:

	Use @pkglibdir@ in src/*.in.

2005-01-06  Jorn Baayen  <jbaayen@gnome.org>

	* libmuine/Makefile.am:
	R libmuine/gettext-utils.c:
	R libmuine/gettext-utils.h:
	* src/About.cs:
	* src/AddAlbumWindow.cs: