@@ -1,5 +1,12 @@
 2005-01-06  Jorn Baayen  <jbaayen@gnome.org>
 
+	* src/AddAlbumWindow.cs:
+	* src/CoverImage.cs:
+
+	Share cover drag entries.
+
+2005-01-06  Jorn Baayen  <jbaayen@gnome.org>
+
 	* src/CoverDatabase.cs:
 	* src/CoverImage.cs:
 	* src/Song.cs:
